<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.blablawild.SearchItineraryActivity">

    <TextView
        android:text="@string/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/editTextSearchDeparture"
        android:layout_alignLeft="@+id/editTextSearchDestination"
        android:layout_alignStart="@+id/editTextSearchDestination" />

    <TextView
        android:text="@string/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editTextSearchDeparture"
        android:layout_alignStart="@+id/editTextSearchDeparture" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/editTextDate"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextSearchDestination"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/editTextSearchDeparture"
        android:layout_alignStart="@+id/editTextSearchDeparture" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:id="@+id/editTextSearchDeparture"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/editTextSearchDestination"
        android:layout_alignLeft="@+id/editTextSearchDestination"
        android:layout_alignStart="@+id/editTextSearchDestination" />

    <Button
        android:text="@string/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSearch"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/editTextDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

</RelativeLayout>
